<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F9FF"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="12dp"
    tools:ignore="HardcodedText,Overdraw">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MEDIA GENERALE"
        android:textColor="#35537F"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8.4"
        android:textColor="#35537F"
        android:textSize="28sp"
        android:textStyle="bold" />
</LinearLayout>
